# Paper-Codex

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  paper-codex.env.example
.github/workflows/: ci.yml  cross-cache.yml  release.yml
deploy/: Caddyfile.paper-codex  caddy.env.example  caddy.service.d.conf  paper-codex.env.example  paper-codex.service  paper-codex.user.env.example  paper-codex.user.service
fixtures/: fake-app-server.py  fake-codex
scripts/: backup.sh  build-release.sh  sync-static.sh
src/: acquisition.rs  api.rs  auth.rs  codex.rs  config.rs  conversation_context.rs  conversation_engine.rs  conversations.rs  db.rs  domain.rs  extraction.rs  graph.rs  knowledge.rs  lib.rs  login_limiter.rs  main.rs  pdf_range.rs  prompts.rs  search.rs  tasks.rs  workspace.rs
tests/: acquisition.rs  api.rs  codex_protocol.rs  conversation_context.rs  conversation_engine.rs  conversations.rs  domain.rs  graph.rs  knowledge.rs  pdf_range.rs  sync_static.sh  tasks.rs  workspace.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: AnnotationGutter.tsx  App.tsx  CodexPanel.tsx  IntakeTaskCard.test.tsx  IntakeTaskCard.tsx  PanelControls.tsx  PdfDocumentViewer.tsx  ResizableDivider.tsx  SemanticGraph.tsx  ThemeToggle.tsx  annotation-layout.test.ts  annotation-layout.ts  annotation-overlay.css  annotation-rail.test.ts  api.test.ts  api.ts  citation-matcher.test.ts  citation-matcher.ts  citation-overlay.test.ts  citation-overlay.ts  codex-panel.css  codex-panel.test.tsx  conversation-scope.test.ts  conversation-scope.ts  login.ts  (+38 more)
(+2 files in other folders)
