[package]
name = "paper-codex"
version = "0.1.0"
edition = "2021"

[lib]
name = "paper_codex"
path = "src/lib.rs"

[[bin]]
name = "paper-codex"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22"
bcrypt = "0.17"
bytes = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3"
hex = "0.4"
jsonwebtoken = "9"
mime_guess = "2"
pdf-extract = "0.12"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "limit", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
